# Smartcontract-rust-wasm

./: .gitignore  Readme.md
GreeterContract/: web.js
GreeterContract/src/: lib.rs
calculator/: Cargo.toml  build.sh  package-lock.json  package.json  web.js  web_cal.js
calculator/src/: lib.rs
erc-20/: Cargo.toml  build.sh  package-lock.json  package.json  web-transfer.js  web.js
erc20/: Cargo.toml  build.sh  package-lock.json  web-transfer.js  web.js
erc20/.cargo/: config
greeter/: Cargo.toml  build.sh  package-lock.json  package.json  web.js  web3-setget.js
greeter/src/: lib.rs
