[package]
name = "calculator"
version = "0.1.0"
authors = ["Nagaraj"]

[dependencies]
pwasm-std = "0.13"
pwasm-ethereum = "0.8"
pwasm-abi = "0.2"
pwasm-abi-derive = "0.2"
lazy_static = { version = "1.2.0", features = ["spin_no_std"] }


[lib]
crate-type = ["cdylib"]

[features]
std = ["pwasm-std/std", "pwasm-ethereum/std", "pwasm-test/std"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
